# api/swagger.yaml
@@ -224,6 +224,39 @@ paths:
         - "read:pets"
       x-swagger-router-controller: "member"
   
+  /member/personalRecord/category/{token}:
+    get:
+      tags:
+      - "member"
+      summary: "Personal record"
+      description: ""
+      operationId: "getPersonalRecordCategory"
+      consumes:
+      - "multipart/form-data"
+      - "application/x-www-form-urlencoded"
+      - "application/json"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "token"
+        in: "path"
+        description: "token of member device"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "Success"
+        500:
+          description: "Internal error"
+        401:
+          description: "Unauthorize"
+      security:
+      - petstore_auth:
+        - "write:pets"
+        - "read:pets"
+      x-swagger-router-controller: "member"
+
   /member/personalRecord/{token}:
     get:
       tags:
@@ -257,7 +290,6 @@ paths:
         - "read:pets"
       x-swagger-router-controller: "member"
 
-  /member/personalRecord:
     post:
       tags:
       - "member"
@@ -272,6 +304,11 @@ paths:
       - "application/xml"
       - "application/json"
       parameters:
+      - name: "token"
+        in: "path"
+        description: "token of member device"
+        required: true
+        type: "string"
       - in: "body"
         name: "body"
         description: "data credential guest"
@@ -588,8 +625,9 @@ definitions:
       token:
         type: "string"
       scheduleId:
-        type: "integer"
-        format: "int32"
+        # type: "integer"
+        # format: "int32"
+        type: "string"
       action:
         type: "string"
 
@@ -604,8 +642,8 @@ definitions:
   personalRecordParam:
     type: "object"
     properties:
-      token:
-        type: "string"
+      # token:
+      #   type: "string"
       prCat:
         type: "string"
       dataValue:
